## ############################################################
##
## File:    Makefile.am
##
## Purpose: Purpose: Needed for cmake in an autotools project
##
## $Id: Makefile.am 1160 2011-12-17 14:45:47Z cary $
##
## ############################################################

SUBDIRS = Modules trycompile

EXTRA_DIST = \
  DetermineVisItArchitecture.cmake \
  Makefile.show mklinks.sh Polyswift.cmake README.txt rmcomms.sed \
  sciCChecks.cmake sciCxxChecks.cmake sciCxxFindVersion.cmake sciDocLogic.cmake \
  sciEngFindVersion.cmake sciFinalize.cmake sciFortranChecks.cmake \
  sciFortranDouble.cmake sciFortranFindVersion.cmake \
  sciFuncsMacros.cmake sciGetDepsFromInstall.cmake sciInit.cmake \
  sciMpiLauncher.cmake sciSeparateLibs.cmake sciSvnInfo.cmake sciWinFlags.cmake \
  Vorpal.cmake xvfb-run.sh

