#####################################################################
# Configure.in file for spanlib
# Stephane Raynaud 2006
#####################################################################

AC_INIT([README])

#####################################################################
AC_SR_HEADER([What is this world?])
#####################################################################

AC_CONFIG_AUX_DIR(admin)
AC_CANONICAL_TARGET([])
AC_PREREQ(2.59)
AC_COPYRIGHT
AM_INIT_AUTOMAKE(spanlib,2.0)
AC_PREFIX_DEFAULT(/usr/local)

######################################################################
AC_SR_HEADER([F90 configuration])
######################################################################
AC_SR_SPANLIB_FORTRAN()

######################################################################
AC_SR_HEADER([Python configuration])
######################################################################
AC_SR_SPANLIB_PYTHON()

######################################################################
AC_SR_HEADER([Misc configuration])
######################################################################
AC_SR_SPANLIB_EXAMPLE()
AC_SR_DOC()

######################################################################
AC_SR_HEADER([Creating Makefiles])
######################################################################
AC_OUTPUT(\
	Makefile \
	src/Makefile \
	lib/Makefile \
	example/Makefile \
	scripts/Makefile \
	doc/Makefile \
)
######################################################################
AC_SR_SPANLIB_FOOTER()
######################################################################
