set(BASELINE_DIR "${UVCDAT_GIT_TESTDATA_DIR}/baselines/vcs")


cdat_add_test(vcs_verify_import
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_import.py
)
cdat_add_test(vcs_line_duplicate_points_fix
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_line_point_extension.py
)
cdat_add_test(vcs_mkscale_zero_range
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_mkscale_zero_range.py
)
cdat_add_test(vcs_verify_create_get
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_create_get.py
)
cdat_add_test(vcs_test_antialiasing
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_antialiasing.py
)
cdat_add_test(vcs_verify_init
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_init.py
)
cdat_add_test(vcs_mkscale_great_range
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_mkscale_great_range.py
)
cdat_add_test(vcs_verify_boxfill_basics
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_boxfill_basics_no_plot.py
)
cdat_add_test(vcs_verify_proj_basics
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_projection_basics_no_plot.py
)
cdat_add_test(vcs_verify_fillarea_basics
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_fillarea_basics_no_plot.py
)

cdat_add_test(vcs_test_clear_empy_canvas
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_clear_empty_canvas.py
  )
cdat_add_test(vcs_test_interact_no_open
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_interact_no_open.py
  )
cdat_add_test(vcs_test_interact_no_plot
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_interact_no_plot.py
  )

cdat_add_test(vcs_test_colorcells
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_colorcells.py
  )

cdat_add_test(vcs_test_template_associated
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_template_saves_associated_to_tt.py
  ${cdat_SOURCE_DIR}/testing/vcs/template_test_associated_dump.json
  )
cdat_add_test(vcs_test_load_json
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_load_json.py
  ${cdat_SOURCE_DIR}/testing/vcs/test_json.json
  )

cdat_add_test(vcs_test_read_yx_scr
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_readyx_scr.py
  ${cdat_SOURCE_DIR}/testing/vcs/read_yxvsx.scr
  )
cdat_add_test(vcs_test_queries
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_queries.py
  )
cdat_add_test(vcs_test_dump_taylordiagram
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_save_td_json.py
  ${cdat_SOURCE_DIR}/testing/vcs/vcs_test_save_td_to_json.json.good
  ${cdat_SOURCE_DIR}/testing/vcs/vcs_test_save_td_to_py.py.good
  )
cdat_add_test(vcs_test_reload_taylor_from_json
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_reload_taylor_from_json.py
  ${cdat_SOURCE_DIR}/testing/vcs/vcs_test_save_td_to_json.json.good
  )
cdat_add_test(vcs_test_dump_json
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_dump_json.py
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_dump_json.json
  )

# Some vector plot testing
FOREACH(angle -180 -135 -90 -45 0 45 135 90 135 )
  cdat_add_test(vcs_test_vectors_angle_${angle}
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_vectors.py
    --angle=${angle}
    "--source=${BASELINE_DIR}/test_vcs_basic_vectors_${angle}.png"
    )
ENDFOREACH(angle)
FOREACH(scale 0.5 2)
  cdat_add_test(vcs_test_vectors_scaling_${scale}
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_vectors.py
    --scale=${scale}
    --angle=45
    "--source=${BASELINE_DIR}/test_vcs_basic_vectors_45_${scale}.png"
    )
ENDFOREACH(scale)
cdat_add_test(vcs_test_vectors_amplitude
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_vectors.py
  --scale=2
  --angle=45
  --amplitude
  "--source=${BASELINE_DIR}/test_vcs_basic_vectors_45_2_amplitude.png"
  )
cdat_add_test(vcs_test_vectors_missing
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_vectors_missing.py
  "--source=${BASELINE_DIR}/test_vcs_vectors_missing.png"
  )
cdat_add_test(vcs_test_remove_marker_none_1d
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_remove_marker_none_1d.py
  "${BASELINE_DIR}/test_remove_marker_none_1d.png"
  )
cdat_add_test(vcs_test_draw_logo_on
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_draw_logo_on.py
  ${BASELINE_DIR}/test_vcs_draw_logo_on.png
  )
cdat_add_test(vcs_test_monotonic_decreasing_yxvsx_default
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_monotonic_decreasing_yxvsx_default.py
  ${BASELINE_DIR}/test_vcs_monotonic_decreasing_yxvsx_default.png
  )
cdat_add_test(vcs_test_taylor_template_ctl
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_taylor_template_ctl.py
  ${BASELINE_DIR}/test_vcs_taylor_template_ctl.png
  )
cdat_add_test(vcs_test_taylor_2_quads
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_taylor_2quads.py
  ${BASELINE_DIR}/test_vcs_taylor_2quads.png
  )

#These test actually plot things need sample data
  cdat_add_test(vcs_test_gen_meshfill
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_gen_meshfill.py
    "${BASELINE_DIR}/test_vcs_gen_meshfill.png"
    )
  cdat_add_test(vcs_setcolormap
    "${PYTHON_EXECUTABLE}"
    "${cdat_SOURCE_DIR}/testing/vcs/test_vcs_setcolormap.py"
    "${BASELINE_DIR}/test_vcs_setcolormap.png"
    )
  cdat_add_test(vcs_test_1d_in_boxfill
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_1d_in_boxfill.py
    "${BASELINE_DIR}/test_1d_in_boxfill.png"
    )
  cdat_add_test(vcs_test_1d_missing
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_1D_missing.py
    "${BASELINE_DIR}/test_vcs_1d_missing.png"
    )
  cdat_add_test(vcs_test_infinity
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_infinity.py
    "${BASELINE_DIR}/infinity.png"
    )
  cdat_add_test(test_vcs_1D_datawc
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_1D_datawc.py
    "${BASELINE_DIR}/test_vcs_1D_datawc.png"
    )
  cdat_add_test(test_vcs_1D_datawc_missing
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_1D_datawc_missing.py
    "${BASELINE_DIR}/test_vcs_1D_datawc_missing.png"
    )
  cdat_add_test(vcs_test_wmo_marker
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_wmo_w07_marker.py
    "${BASELINE_DIR}/wmo_marker.png"
    )
  cdat_add_test(vcs_test_wmo_markers
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_wmo_markers.py
    "${BASELINE_DIR}/wmo_markers.png"
    )
  cdat_add_test(vcs_test_iso_celine_part1
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_celine_iso_bug.py
    "${BASELINE_DIR}/test_celine_iso.png"
    )
  cdat_add_test(vcs_test_iso_celine_part2
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_celine_iso_bug_part2.py
    "${BASELINE_DIR}/test_celine_iso_2.png"
    )
  cdat_add_test(vcs_test_markers
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_markers.py
    "${BASELINE_DIR}/test_markers.png"
    )
  cdat_add_test(vcs_test_star_triangle_markers
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_star_triangle_markers.py
    "${BASELINE_DIR}/test_star_triangle_markers.png"
    )
  cdat_add_test(vcs_test_canvas_background
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_canvas_background.py
    "${BASELINE_DIR}/test_canvas_background.png"
    )
  cdat_add_test(vcs_test_canvas_background_update
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_canvas_background_update.py
    "${BASELINE_DIR}/test_canvas_background_update.png"
    )
  cdat_add_test(vcs_test_boxfill_10x10_numpy
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_10x10_numpy.py
    "${BASELINE_DIR}/test_vcs_boxfill_10x10_numpy.png"
    )
  cdat_add_test(vcs_test_boxfill_10x10_masked_numpy
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_10x10_masked_numpy.py
    "${BASELINE_DIR}/test_vcs_boxfill_10x10_masked_numpy.png"
    )
  cdat_add_test(vcs_test_1D_with_manyDs
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_1D_with_manyDs.py
    "${BASELINE_DIR}/test_1D_with_manyDs.png"
    )
  cdat_add_test(vcs_test_1d_marker_not_shown_if_xaxis_flipped
    "${PYTHON_EXECUTABLE}"
    ${cdat_SOURCE_DIR}/testing/vcs/test_1d_marker_not_shown_if_xaxis_flipped.py
    "${BASELINE_DIR}/test_1d_marker_not_shown_if_xaxis_flipped.png"
    )


  # These test actually plot things need sample data
  if (CDAT_DOWNLOAD_SAMPLE_DATA)
    cdat_add_test(test_vcs_boxfill_custom
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_custom.py
      "${BASELINE_DIR}/test_boxfill_custom.png"
      )
    cdat_add_test(test_vcs_boxfill_custom_non_default_levels
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_custom_non_default_levels.py
      "${BASELINE_DIR}/test_boxfill_custom_non_default_levels.png"
      )
    cdat_add_test(test_vcs_boxfill_custom_ext1
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_custom_ext1.py
      "${BASELINE_DIR}/test_boxfill_custom_ext1.png"
      )
    cdat_add_test(test_vcs_boxfill_custom_ext2
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_custom_ext2.py
      "${BASELINE_DIR}/test_boxfill_custom_ext2.png"
      )
    cdat_add_test(test_vcs_boxfill_custom_ext1_ext2
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_custom_ext1_ext2.py
      "${BASELINE_DIR}/test_boxfill_custom_ext1_ext2.png"
      )
    cdat_add_test(test_vcs_boxfill_number_color_less_than_number_levels
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_number_color_less_than_number_levels.py
      "${BASELINE_DIR}/test_boxfill_number_color_less_than_number_levels.png"
      )
    cdat_add_test(test_vcs_auto_time_labels
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_auto_time_labels.py
      "${BASELINE_DIR}/test_vcs_auto_time_labels.png"
      )
    cdat_add_test(test_vcs_lon_axes_freak_out
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_lon_axes_freak_out.py
      "${BASELINE_DIR}/test_lon_axes_freak_out.png"
      )
    cdat_add_test(test_vcs_isofill_mask_cell_shift
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_isofill_mask_cell_shift.py
      "${BASELINE_DIR}/test_vcs_isofill_mask_cell_shift.png"
      )
    cdat_add_test(vcs_test_bad_time_units
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_bad_time_units.py
      )
    cdat_add_test(vcs_test_plot_file_varible
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_plot_file_var.py
      )
    FOREACH(gm boxfill isofill meshfill)
      FOREACH(ori horizontal vertical)
        FOREACH(ext1 y n)
          FOREACH(ext2 y n)
            cdat_add_test(vcs_test_legend_${gm}_${ori}_ext1_${ext1}_ext2_${ext2}
              "${PYTHON_EXECUTABLE}"
              ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_legend.py
              --gm_type=${gm}
              --orientation=${ori}
              --ext1=${ext1}
              --ext2=${ext2}
              "--source=${BASELINE_DIR}/test_vcs_legend_${gm}_${ori}_ext1_${ext1}_ext2_${ext2}.png"
              )
          ENDFOREACH(ext2)
        ENDFOREACH(ext1)
      ENDFOREACH(ori)
    ENDFOREACH(gm)
    FOREACH(gm boxfill isofill isoline vector meshfill yxvsx xvsy xyvsy 1d scatter)
      cdat_add_test(vcs_test_basic_${gm}_zero
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --zero
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_zero.png"
        )
      cdat_add_test(vcs_test_basic_${gm}
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}.png"
        )
      cdat_add_test(vcs_test_basic_${gm}_masked
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --mask
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_masked.png"
        )
    ENDFOREACH(gm)
    cdat_add_test(vcs_test_show
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_show.py
      )
    FOREACH(gm boxfill isofill isoline meshfill )
     FOREACH(ptype 0 -3 aeqd)
      cdat_add_test(vcs_test_basic_${gm}_masked_${ptype}_proj
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --mask
        --projection=${ptype}
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_masked_${ptype}_proj.png"
        )
      cdat_add_test(vcs_test_basic_${gm}_${ptype}_proj_SH
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --projection=${ptype}
        --lat1=-90
        --lat2=0
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_${ptype}_proj_SH.png"
        )
      cdat_add_test(vcs_test_basic_${gm}_${ptype}_proj_SH_-180_180
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --projection=${ptype}
        --lat1=-90
        --lat2=0
        --lon1=-180
        --lon2=180
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_${ptype}_proj_SH_-180_180.png"
        )
      cdat_add_test(vcs_test_basic_${gm}_${ptype}_proj_SH_0_360
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --projection=${ptype}
        --lat1=-90
        --lat2=0
        --lon1=0
        --lon2=360
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_${ptype}_proj_SH_0_360.png"
        )
      cdat_add_test(vcs_test_basic_${gm}_${ptype}_proj_NH
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --projection=${ptype}
        --lat1=90
        --lat2=0
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_${ptype}_proj_NH.png"
        )
      cdat_add_test(vcs_test_basic_${gm}_${ptype}_proj_SH_gm
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --projection=${ptype}
        --lat1=-90
        --lat2=0
        --range_via_gm
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_${ptype}_proj_SH_via_gm.png"
        )
      cdat_add_test(vcs_test_basic_${gm}_${ptype}_proj_SH_-180_180_gm
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --projection=${ptype}
        --lat1=-90
        --lat2=0
        --lon1=-180
        --lon2=180
        --range_via_gm
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_${ptype}_proj_SH_-180_180_via_gm.png"
        )
      cdat_add_test(vcs_test_basic_${gm}_${ptype}_proj_SH_0_360_gm
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --projection=${ptype}
        --lat1=-90
        --lat2=0
        --lon1=0
        --lon2=360
        --range_via_gm
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_${ptype}_proj_SH_0_360_via_gm.png"
        )
      cdat_add_test(vcs_test_basic_${gm}_${ptype}_proj_NH_gm
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --projection=${ptype}
        --lat1=90
        --lat2=0
        --range_via_gm
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_${ptype}_proj_NH_via_gm.png"
        )
      cdat_add_test(vcs_test_basic_${gm}_${ptype}_proj_NH_gm_flip
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py
        --gm_type=${gm}
        --projection=${ptype}
        --lat1=90
        --lat2=0
        --range_via_gm
        --gm_flips_lat_range
        "--source=${BASELINE_DIR}/test_vcs_basic_${gm}_${ptype}_proj_gmflip_NH_via_gm.png"
        )
     ENDFOREACH(ptype)
    ENDFOREACH(gm)
    cdat_add_test(vcs_test_isoline_numpy
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_isoline_numpy.py
      ${BASELINE_DIR}/test_vcs_isoline_numpy.png
      )
    cdat_add_test(vcs_test_meshfill_draw_mesh
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_meshfill_draw_mesh.py
      ${BASELINE_DIR}/test_meshfill_draw_mesh.png
      )
    cdat_add_test(vcs_test_isoline_labels_multi_label_input_types
      "${PYTHON_EXECUTABLE}"
      "${cdat_SOURCE_DIR}/testing/vcs/test_vcs_isoline_labels_multi_label_input_types.py"
      "${BASELINE_DIR}/test_vcs_isoline_labels_multi_label_input_types.png"
      )
    cdat_add_test(vcs_test_isoline_labels
      "${PYTHON_EXECUTABLE}"
      "${cdat_SOURCE_DIR}/testing/vcs/test_isoline_labels.py"
      "${BASELINE_DIR}/test_isoline_labels.png"
      )
    cdat_add_test(vcs_test_oned_level_axis
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_oned_level_axis.py
      "${BASELINE_DIR}/test_oned_level_axis.png"
      )
    cdat_add_test(vcs_test_${gm}_patterns
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_patterns.py
      "${BASELINE_DIR}/test_vcs_patterns.png"
      )
    cdat_add_test(vcs_test_first_png_blank
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_first_png_blank.py
      "${BASELINE_DIR}/first_png_blank.png"
      )
    #    cdat_add_test(vcs_test_aspect_ratio
    #  "${PYTHON_EXECUTABLE}"
    #  ${cdat_SOURCE_DIR}/testing/vcs/test_aspect_ratio.py
    #  ${cdat_SOURCE_DIR}/testing/vcs/test_aspect_ratio.py
    #  )
    cdat_add_test(vcs_test_polar_set_opt_param_polar
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_polar_set_opt_param_polar.py
      "${BASELINE_DIR}/test_polar_set_opt_param_polar.png"
      )
    cdat_add_test(vcs_test_boxfill_lev1_lev2
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_lev1_lev2.py
      "${BASELINE_DIR}/test_boxfill_lev1_lev2.png"
      )
    cdat_add_test(vcs_test_boxfill_lev1_lev2_ext1
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_lev1_lev2_ext1.py
      "${BASELINE_DIR}/test_boxfill_lev1_lev2_ext1.png"
      )
    cdat_add_test(vcs_test_boxfill_lev1_lev2_ext2
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_lev1_lev2_ext2.py
      "${BASELINE_DIR}/test_boxfill_lev1_lev2_ext2.png"
      )
    cdat_add_test(vcs_test_boxfill_lev1_lev2_ext1_ext2
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_lev1_lev2_ext1_ext2.py
      "${BASELINE_DIR}/test_boxfill_lev1_lev2_ext1_ext2.png"
      )

    FOREACH(flip None X XY Y)
      cdat_add_test(vcs_test_flip${flip}
        "${PYTHON_EXECUTABLE}"
        ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_flip${flip}.py
        "${BASELINE_DIR}/test_vcs_flip${flip}.png"
        )
    ENDFOREACH(flip)

    cdat_add_test(vcs_test_boxfill_lev1_lev2_ta_missing
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_boxfill_lev1_lev2_ta_missing.py
      "${BASELINE_DIR}/test_boxfill_lev1_lev2_ta_missing.png"
      )

    cdat_add_test(vcs_test_close
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_close.py
      "${BASELINE_DIR}/test_vcs_close.png"
      )

    cdat_add_test(vcs_test_basic_isofill_bigvalues
      "${PYTHON_EXECUTABLE}"
      "${cdat_SOURCE_DIR}/testing/vcs/test_vcs_basic_gms.py"
      --gm_type=isofill
      --bigvalues
      "--source=${BASELINE_DIR}/test_vcs_basic_isofill_bigvalues.png"
      )
    cdat_add_test(vcs_test_issue_960_labels
      "${PYTHON_EXECUTABLE}"
      ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_issue_960_labels.py
      ${BASELINE_DIR}/test_vcs_issue_960_labels_1.png
      ${BASELINE_DIR}/test_vcs_issue_960_labels_2.png
      )
  endif()

cdat_add_test(vcs_test_endconfigure
  "${PYTHON_EXECUTABLE}"
  ${cdat_SOURCE_DIR}/testing/vcs/test_vcs_endconfigure.py
)
add_subdirectory(vtk_ui)
